- Connection: included server name in dns error message (--> 'server.tld: connection refused')
- ClientBase: onDisconnect() gets called if the connection got refused or DNS error occurred
- statistics interface (connection/compression/encryption statistics and status, etc)
- Tag: added 'TagList findChildren( std::string& )'
- Disco: lifted limit of one DiscoNodeHandler per Node
- Parser: added ParserHandler and install parser.h
- Tag: added operator== & operator!=
- ClientBase: added setCompression( bool ) to switch stream compression on/off
- renamed Stanza::show() --> Stanza::presence()
- RosterListener: moved Roster to gloox namespace
- RosterListener: new handleRosterPresence() replaces itemUn/Available() and presenceUpdated()
- RosterListener: added handleSelfPresence()
- RosterListener: added 'handle' prefix to function names
- MessageHandler: handleMessage() takes optional MessageSession arg
- DiscoNodeHandler: added DiscoNodeItem to properly represent a disco#item
- ClientBase: removed setAutoMessageSession() in favor of registerMessageSessionHandler()
- PrivacyItem: renamed enum members from ALL_UPPER_CASE to MixedCase
- PrivateXMLHandler: renamed enum members from ALL_UPPER_CASE to MixedCase
- MessageSession: added filtering by message type
- AdhocHandler: added 'handleAdhoc' prefix
- Adhoc: handle Disco errors
- removed unmaintained Dev-C++ project (in favor of Code::Blocks project)
- ClientBase: renamed ping() --> whitespacePing()
- HTTP proxy support (thanks to Jose A. Perez Sanchez)
- HTTP proxy auth support
- Tag: basic XPath support
- DNS: cleanup
- TagHandler: now receives Tag, not Stanza
- Parser: cleanup, now uses TagHandler

since -pre5:
- ClientBase: added removeIDHandler() to cancel trackID() operations
- added DataFormField( const std::string& name, const std::string& label = "",
                       const std::string& value = "", DataFormFieldType type = FieldTypeTextSingle );
- ClientBase: added setSASLMechanisms()